--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Lato:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <!-- Font-Awesome link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
   </head>
   <body>
     <div class="mobile">
